syntax = "proto3";

option csharp_namespace = "App.Shared.Protos";

package catalog;

service CatalogService {
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  int32 stock = 5;
}

message GetProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetProductsResponse {
  repeated Product items = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_count = 4;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string price = 3;
  int32 stock = 4;
}

message CreateProductResponse {
  string id = 1;
}
